--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#FF0099CC</color>
+    <color name="red">#FF0000</color>
+    <color name="dark_green">#38A779</color>
+    <color name="dark_blue">#3295b6</color>
 </resources>
