--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
+        android:id="@+id/image_user"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="center"
