Criado intents para navegação entre telas

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="red">#FF0000</color>
     <color name="dark_green">#38A779</color>
     <color name="dark_blue">#3295b6</color>
+    <color name="orange">#DF3A04</color>
 </resources>
