--- a/app/src/main/res/layout/activity_projetos.xml
+++ b/app/src/main/res/layout/activity_projetos.xml
@@ -5,17 +5,20 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Projetos">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/bar_action"
+        android:id="@+id/actionbar_projeto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/black"
         app:navigationIcon="@drawable/ic_back"
+        app:titleTextColor="@color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:title="Meus Projetos"/>
+        app:title="@string/title_meus_projetos"/>
 
     <ImageView
         android:id="@+id/barbearia"
@@ -42,14 +45,15 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/detalhes_do_projeto"
-        app:layout_constraintStart_toEndOf="@id/barbearia"
-        app:layout_constraintTop_toBottomOf="@id/txtTituloBarbearia"
-        android:textStyle="bold"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/orange"
-        android:textColor="@color/white"/>
+        android:text="@string/detalhes_do_projeto"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:cornerRadius="50dp"
+        app:layout_constraintStart_toEndOf="@id/barbearia"
+        app:layout_constraintTop_toBottomOf="@id/txtTituloBarbearia" />
 
     <ImageView
         android:id="@+id/pizzaria"
@@ -82,6 +86,7 @@
         android:textStyle="bold"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
+        app:cornerRadius="50dp"
         android:backgroundTint="@color/orange"
         android:textColor="@color/white"/>
 
@@ -114,6 +119,7 @@
         app:layout_constraintStart_toEndOf="@id/marcenaria"
         app:layout_constraintTop_toBottomOf="@id/txtTituloMarcenaria"
         android:textStyle="bold"
+        app:cornerRadius="50dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/orange"
