--- a/app/src/main/res/layout/activity_contatos.xml
+++ b/app/src/main/res/layout/activity_contatos.xml
@@ -20,13 +20,54 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:title="@string/title_contatos"/>
 
+    <ImageView
+        android:id="@+id/img_phone"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_phone"
+        android:layout_margin="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/actionbar_contato"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/phone_number"
         android:textColor="@color/black"
-        android:text="TESTANDO"
-        app:layout_constraintTop_toTopOf="@+id/actionbar_contato"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toEndOf="@id/img_phone"
+        app:layout_constraintTop_toTopOf="@id/img_phone"
+        android:textSize="20sp"
+        android:layout_margin="10dp"/>
+
+    <ImageView
+    android:id="@+id/img_email"
+    android:layout_width="50dp"
+    android:layout_height="50dp"
+    android:src="@drawable/ic_email"
+    android:layout_margin="10dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/img_phone"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/contato_email"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toEndOf="@id/img_email"
+        app:layout_constraintTop_toTopOf="@id/img_email"
+        android:textSize="20sp"
+        android:layout_margin="10dp"/>
+
+    <ImageView
+        android:id="@+id/img_wpp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/logo_whatsapp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="20dp"/>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
